ops/phase1/run-20251026-081603.log
  File "/mnt/e/env/ts/nf/tsmp-oop/scripts/cli.py", line 36
    if args.with-mlflow:
            ^^^^
SyntaxError: invalid syntax
